# rag-mcp-server

./: .gitignore  DEV_SPEC.md  README.md  main.py  pyproject.toml
.cursor/: mcp.json
config/: settings.yaml  settings.yaml.example
config/prompts/: chunk_refinement.txt  image_captioning.txt  rerank.txt
docs/: CURSOR_MCP_SETUP.md  E2E_TESTS.md  INGESTION_IMPLEMENTATION_AND_SPEC.md  MCP_LOCAL_TEST.md  RAGAS_EVALUATION.md
scripts/: clear_all_chunks.py  evaluate.py  ingest.py  query.py  start_dashboard.py  test_mcp_local.py
src/core/: __init__.py  settings.py  types.py
src/ingestion/: __init__.py  document_manager.py  pipeline.py
src/libs/: __init__.py
src/mcp_server/: __init__.py  protocol_handler.py  server.py
src/observability/: __init__.py  logger.py
tests/e2e/: test_dashboard_smoke.py  test_data_ingestion.py  test_mcp_client.py  test_recall.py
tests/fixtures/: golden_test_set.json  noisy_chunks.json
tests/integration/: README.md  __init__.py  test_chroma_store_roundtrip.py  test_chunk_refiner_llm.py  test_hybrid_search.py  test_ingestion_pipeline.py  test_mcp_server.py  test_metadata_enricher_llm.py
tests/unit/: test_azure_vision_llm.py  test_batch_processor.py  test_bm25_indexer_roundtrip.py  test_chunk_refiner.py  test_composite_evaluator.py  test_config_loading.py  test_core_types.py  test_cross_encoder_reranker.py  test_custom_evaluator.py  test_dense_encoder.py  test_dense_retriever.py  test_document_chunker.py  test_document_manager.py  test_embedding_factory.py  test_embedding_providers_smoke.py  test_eval_runner.py  test_file_integrity.py  (+31 more)
(+99 files in other folders)
