[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server"
version = "0.1.0"
description = "Modular RAG MCP Server - 可插拔、可观测的 RAG 知识检索服务"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "Pillow>=9.0",
    "langchain-text-splitters>=0.3.0,<1.0",
    "chromadb>=0.4.0",
    "pypdf>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]
